# site_os

./: Cargo.toml  README.md  tailwind.config.js
src/: active_procceses.rs  application.rs  backend_utils.rs  bottombar.rs  client_state.rs  desktop.rs  dock.rs  env_vars.rs  error_template.rs  fallback.rs  file_system.rs  folder.rs  global_state.rs  icon.rs  icon_grid.rs  lib.rs  main.rs  server_state.rs  system_runtime.rs  taskbar.rs  topbar.rs  user_msg.rs
style/: output.css
